Fixed text error

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Zac's Portfolio</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">        
     </head>
 
     <body>
@@ -22,10 +22,14 @@
             </div>
           </header>
           <section id="top">
-          <div class="container">
+          <div class="container" id="topDiv">
             <div class="row profilePicContainer">
               <div class="profileInfo vertical-center">
-                <p>Web Developer, proficient in HTML, CSS, and Javascript. Experience with libraries like JQuery and React, and knowledgable of tools like Webpack, Babel, Firebase, Git, and Redux.</p>
+                <span>Web Developer, proficient in HTML, CSS, 
+                  and Javascript. Experience with libraries 
+                  like JQuery and React, and knowledgable of 
+                  tools like Webpack, Babel, Firebase, Git, 
+                  and Redux.</span>
               </div>
               <img id="profilePic" src="https://lh3.google.com/u/0/d/12j3P8FH9QH02vR25hLuY0VPlBf8u8Hz2=w1143-h610-iv1" height="250px" width="250px" />
             </div>
