--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <html>
     <head>
-        <title>Zac's Portfolio</title>
-        <link rel="stylesheet" href="style.css">
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118517141-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-118517141-1');
+      </script>
+
+      <title>Zac's Portfolio</title>
+      <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
