--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         gtag('config', 'UA-118517141-1');
       </script>
       <title>Zac's Portfolio</title>
-      <!--<link rel="stylesheet" href="style.css">-->
-      <link rel="preload" href="style.css" as="style">
+      <link rel="stylesheet" href="style.css">
+      <!--<link rel="preload" href="style.css" as="style">-->
     </head>
 
     <body>
