--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         gtag('config', 'UA-118517141-1');
       </script>
       <title>Zac's Portfolio</title>
+      <link rel="preload" href="style.css" as="style">
       <link rel="stylesheet" href="style.css">
       <!--<link rel="preload" href="style.css" as="style">-->
     </head>
