Updated foodpicker app to netlify site

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
           <div class="row space-around imgRow">
             <div class="imgCard">
-              <p class="cardTitle"><span><a href="https://foodpicker-app.herokuapp.com/">FoodPicker App</a></span></p>
+              <p class="cardTitle"><span><a href="https://transcendent-moxie-9f27a0.netlify.app/">FoodPicker App</a></span></p>
               <p class="cardSubtitle"><i>React Js, Webpack, Babel</i></p>
               <a href="https://foodpicker-app.herokuapp.com/"><img src="images/foodpicker.png" height="250px" width="360px" /></a>
             </div>
