Added giphy search app

--- a/index.html
+++ b/index.html
@@ -43,21 +43,15 @@
           <div class="row space-around imgRow">
             <!--
             <div class="imgCard">
-              <p class="cardTitle"><span><a href="http://zacmoss-com.stackstaging.com/16-events/">Event Poster</a></span></p>
-              <p class="cardSubtitle"><i>Javascript, PHP, MySQL</i></p>
-            <a href="http://zacmoss-com.stackstaging.com/16-events/"><img src="images/eventposter.png" height="250px" width="360px" /></a>
-            </div>
-            
-            <div class="imgCard">
-              <p class="cardTitle"><span><a href="https://zacs-expensify-app.herokuapp.com">Expensify App</a></span></p>
-              <p class="cardSubtitle"><i>React Js, Redux, Firebase</i></p>
-              <a href="https://zacs-expensify-app.herokuapp.com"><img src="images/expensify.png" height="250px" width="360px" /></a>
-            </div>
-            -->
-            <div class="imgCard">
               <p class="cardTitle"><span><a href="https://zacs-event-poster.herokuapp.com/">Event Poster</a></span></p>
               <p class="cardSubtitle"><i>React, Node Js, MongoDb</i></p>
               <a href="https://zacs-event-poster.herokuapp.com/"><img src="images/eventposter2.png" height="250px" width="360px" /></a>
+            </div>
+            -->
+            <div class="imgCard">
+              <p class="cardTitle"><span><a href="https://adoring-hypatia-f57b50.netlify.app/">Giphy Search App</a></span></p>
+              <p class="cardSubtitle"><i>Vue Js</i></p>
+              <a href="https://adoring-hypatia-f57b50.netlify.app/"><img src="images/gify-search.png" height="250px" width="360px" /></a>
             </div>
             <div class="imgCard">
               <p class="cardTitle"><span><a href="https://zacs-react-weather-app.herokuapp.com/">Weather Forecast App</a></span></p>
@@ -70,7 +64,7 @@
             <div class="imgCard">
               <p class="cardTitle"><span><a href="https://transcendent-moxie-9f27a0.netlify.app/">FoodPicker App</a></span></p>
               <p class="cardSubtitle"><i>React Js, Webpack, Babel</i></p>
-              <a href="https://foodpicker-app.herokuapp.com/"><img src="images/foodpicker.png" height="250px" width="360px" /></a>
+              <a href="https://transcendent-moxie-9f27a0.netlify.app/"><img src="images/foodpicker.png" height="250px" width="360px" /></a>
             </div>
             <div class="imgCard">
               <p class="cardTitle"><span><a href="https://louisianajones.herokuapp.com/">Louisiana Jones Blog</a></span></p>
