Removed heroku apps

--- a/index.html
+++ b/index.html
@@ -40,25 +40,19 @@
       <section id="portfolio">
         
         <div id="portfolioContainer2"> 
-          <div class="row space-around imgRow">
-            <!--
+          <!-- Removing temporarily due to Heroku issues -->
+          <!--<div class="row space-around imgRow">
             <div class="imgCard">
               <p class="cardTitle"><span><a href="https://zacs-event-poster.herokuapp.com/">Event Poster</a></span></p>
               <p class="cardSubtitle"><i>React, Node Js, MongoDb</i></p>
               <a href="https://zacs-event-poster.herokuapp.com/"><img src="images/eventposter2.png" height="250px" width="360px" /></a>
-            </div>
-            -->
-            <div class="imgCard">
-              <p class="cardTitle"><span><a href="https://adoring-hypatia-f57b50.netlify.app/">Giphy Search App</a></span></p>
-              <p class="cardSubtitle"><i>Vue Js</i></p>
-              <a href="https://adoring-hypatia-f57b50.netlify.app/"><img src="images/gify-search.png" height="250px" width="360px" /></a>
             </div>
             <div class="imgCard">
               <p class="cardTitle"><span><a href="https://zacs-react-weather-app.herokuapp.com/">Weather Forecast App</a></span></p>
               <p class="cardSubtitle"><i>React, Node Js, Express</i></p>
               <a href="https://zacs-react-weather-app.herokuapp.com/"><img src="images/weatherApp.png" height="250px" width="360px" /></a>
             </div>
-          </div>
+          </div>-->
 
           <div class="row space-around imgRow">
             <div class="imgCard">
@@ -66,10 +60,16 @@
               <p class="cardSubtitle"><i>React Js, Webpack, Babel</i></p>
               <a href="https://transcendent-moxie-9f27a0.netlify.app/"><img src="images/foodpicker.png" height="250px" width="360px" /></a>
             </div>
-            <div class="imgCard">
+            <!-- Removing temporarily due to Heroku issues -->
+            <!--<div class="imgCard">
               <p class="cardTitle"><span><a href="https://louisianajones.herokuapp.com/">Louisiana Jones Blog</a></span></p>
               <p class="cardSubtitle"><i>HTML, Sass, React Js</i></p>
               <a href="https://louisianajones.herokuapp.com/"><img src="images/louisianajones.png" height="250px" width="360px" /></a>
+            </div>-->
+            <div class="imgCard">
+              <p class="cardTitle"><span><a href="https://adoring-hypatia-f57b50.netlify.app/">Giphy Search App</a></span></p>
+              <p class="cardSubtitle"><i>Vue Js</i></p>
+              <a href="https://adoring-hypatia-f57b50.netlify.app/"><img src="images/gify-search.png" height="250px" width="360px" /></a>
             </div>
           </div>
 
