Updated portfolio site

--- a/index.html
+++ b/index.html
@@ -210,17 +210,17 @@
           <div id="aboutText2">
             <div id="aboutTextMobileDiv">
               <h2>Hey! I'm Zac.</h2>
-              <p>I'm a web developer from Lafayette, Louisiana.</p>
-              <p>My skills include HTML, CSS, Javascript, 
-                ReactJs, Git, Github, Heroku, Firebase,
-                Webpack, Babel, Sass, NodeJs, Express, MongoDb, and Chai.</p>
-              <p>I am currently looking for opportunities in Web Development.
+              <p>I'm a software developer from Lafayette, Louisiana.</p>
+              <p>I've worked with PHP, Python, HTML, CSS, Javascript, VueJs, and ReactJs.</p>
+              <p>The database systems I'm most familiar with are MySQL, Redshift, and Redis.</p>
+              <p>I have experience with many AWS Services including EC2, S3, Redshift, RDS, CodeBuild, DMS and Lambda.</p>
+              <p>I am currently looking for opportunities in Software Development.
                 If you think I may be a good fit for your team, feel free
                 to send me an <a href="mailto:zachary.moss@ymail.com">email!</a></p>
             </div>
           </div>
           <div id="aboutPicContainer">
-            <img id="aboutPic" src="images/me.jpg" width="300px" height="300px">
+            <img id="aboutPic" src="images/me2.jpg" width="300px" height="300px">
           </div>
         </div>
       </section>
@@ -232,8 +232,8 @@
               <p id="desktopEmail">Email me at <a href="mailto:zachary.moss@ymail.com" id="email">zachary.moss@ymail.com</a></p>
               <a id="mobileEmail" href="mailto:zachary.moss@ymail.com"><p>Email me at zachary.moss@ymail.com</p></a>
               
-              <p id="desktopResume">Download <a id="resume" href="images/resume.pdf" download="ZacMossResume">my resume</a></p>
-              <a id="mobileResume" href="images/resume.pdf" download="ZacMossResume"><p>Download my resume</p></a>
+              <p id="desktopResume">Download <a id="resume" href="images/ZacMossResume2023.pdf" download="ZacMossResume">my resume</a></p>
+              <a id="mobileResume" href="images/ZacMossResume2023.pdf" download="ZacMossResume"><p>Download my resume</p></a>
             
             </div>
           </div>
